--- a/css/nationalPark.css
+++ b/css/nationalPark.css
@@ -1,8 +1,4 @@
 
-
-
-
-
 .search-options {
     margin-bottom: 20px;
 }
@@ -15,7 +11,7 @@ label {
 
 select, button {
     width: 30%;
-    /*width: 100%;*/
+
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 4px;
@@ -23,16 +19,22 @@ select, button {
 }
 
 button {
-    background-color: #007bff;
+    background-color: rgb(69, 94, 59);
     color: white;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: rgb(186, 201, 180);
 }
 
 #results {
     margin-top: 20px;
     border: 3px solid red;
 }
+
+
+
+
+
+
