--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
-
+/* Homepage styles*/
 .carousel-inner img {
-    height: 300px; /* Adjust height as needed */
+    height: 300px; 
     object-fit: cover;
     margin-bottom: 10px;
 }
