made additional edits
made additional edits

--- a/css/nationalPark.css
+++ b/css/nationalPark.css
@@ -23,6 +23,7 @@ button {
     background-color: rgb(49,74, 78);
     color: white;
     cursor: pointer;
+    font-weight: 700;
 }
 
 button:hover {
