--- a/css/universalStyles.css
+++ b/css/universalStyles.css
@@ -1,10 +1,10 @@
-
 /*General Page styles*/
+
  *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-family: "Bungee", sans-serif;
     /*desert chadow rgb(104, 85, 83)
     sesert green rgb(186, 201, 180)
     desert shadow rgb(104, 85, 83)
@@ -12,13 +12,11 @@
 }
 
 body {
-    font-family: 'Ubuntu', sans-serif;
     line-height: 1.6;
     background-color: rgb(186, 201, 180);
         background-image: url("/images/logo-8768915.jpg");  
         background-size:cover;
-        background-repeat: no-repeat;
-     
+        background-repeat: no-repeat;   
 }
 main{
     background-color: rgb(238, 197,169);
